feat(signet-trailer): refresh landing page assets
- wire up new og-image.png and update SEO metadata to reference it
- rebuild favicon.svg as a white S over the signature purple gradient
- add the new src/public static bundle and drop the stale package-lock from the old scaffold

make validate
npm run build (signet-trailer)

--- a/signet-trailer/index.html
+++ b/signet-trailer/index.html
@@ -4,20 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Signet - See What Matters and Why</title>
-  <meta name="description" content="Signet helps you see what matters online and why — with receipts." />
-  <meta property="og:title" content="Signet - See What Matters and Why" />
-  <meta property="og:description" content="Unbreak the internet. Signet helps you see what matters and why — with receipts." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://signet.ing/" />
-  <meta property="og:image" content="https://signet.ing/signet-og.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:type" content="image/png" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Signet - See What Matters and Why" />
-  <meta name="twitter:description" content="Unbreak the internet. Signet helps you see what matters and why — with receipts." />
-  <meta name="twitter:image" content="https://signet.ing/signet-og.png" />
+      <title>Landing Page Animation</title>
     </head>
 
     <body>
